# 19214KseniaLyashchenko

./: Fibonachi.hs  HomeWork3  Homework1.hs  Lab0.hs  Number System.hs  Quantum States  foldl.hs  foldr.hs  new.hs  project.hs
Task/: Assembly-CSharp.csproj
Task_2_1/src/main/java/: Stack.java
Task_2_1/src/test/java/: Tests.java
biorhythms/: AboutProject.txt  README.md  biorhythms.cabal
biorhythms/src/: Main.hs
project/: README.md  project.cabal  stack.yaml
project/src/: Calendar.hs  Krestiki_noliki.hs  Main.hs
