name : biorhythms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/saper#readme
license:             BSD3
license-file:        LICENSE
author:              KsuhaProject
maintainer:          k.lyashchenko@g.nsu.ru
copyright:           KsuhaProject
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      Cabal >=2.4.0.0 && <4
    , base >=4.4
    , filepath

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Executable biorhythms
  Main-Is: Main.hs
  Hs-Source-Dirs: src/
  Build-Depends:
     base == 4.*,
     fltkhs >= 0.8.0.3,
     stm,
     text >= 1.2.2.0
	 gtk,
	 bytestring >= 0.10.10.0
  default-language: Haskell2010
  ghc-Options: -Werror -threaded
  if impl(ghc >= 7.10) && impl(ghc < 8.0) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
